--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=default-width; user-scalable=no"/>
   <meta name="format-detection" content="telephone=no">
   <title>Qrious</title>
-  <link href=".css" media="screen" rel="stylesheet" type="text/css">
-  <script src="http://hoptoadapp.com/javascripts/notifier.js" type="text/javascript"></script>
+  <link href="stylesheets/jqtouch/jqtouch.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="stylesheets/jqtouch/theme.css" media="screen" rel="stylesheet" type="text/css">
+  <script src="javascripts/jqtouch/jquery-1.4.2.js" type="text/javascript"></script>
+  <script src="javascripts/jqtouch/jqtouch.js" type="text/javascript"></script>
+  <script src="javascripts/jquery.tmpl.js" type="text/javascript"></script>
+  <script src="javascripts/knockout-1.1.2.js" type="text/javascript"></script>
+  <script src="javascripts/twitter.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="jqt">
@@ -15,23 +20,22 @@
     <h2>Loading...</h2>
   </div>
 
-  <div id="twitter" class="current" data-bind="pageAnimationEnd: twitterView.pageAnimationEnded">
+  <div id="twitter" class="current" data-bind="pageAnimationEnd: twitterPageAnimationEnded">
     <div class="toolbar">
-      <h1 data-bind="text: twitterView.username"></h1>
-      <a href="#" class="back">Back</a>
-      <a class="button" data-bind="click: twitterView.refreshTweetsClicked" rel="external">Refresh</a>
+      <h1 data-bind="text: username"></h1>
+      <a class="button" data-bind="click: twitterPageRefreshClicked" rel="external">Refresh</a>
     </div>
     <div class="s-scrollwrapper">
       <div>
         <h2>
           <span>Latest tweets for</span>
-          <a data-bind="href: twitterView.userPageUrl" rel="external">
-            <span data-bind="text: twitterView.userPageUrl"></span>
+          <a data-bind="href: userPageUrl" rel="external">
+            <span data-bind="text: userPageUrl"></span>
           </a>
         </h2>
         <ul class="rounded"
-            data-bind="template: {name:'tweetsTemplate', foreach:twitterView.latestTweets}"></ul>
-        <a class="whiteButton more" data-bind="click: twitterView.showMoreTweetsClicked" rel="external">More</a>
+            data-bind="template: {name:'tweetsTemplate', foreach:latestTweets}"></ul>
+        <a class="whiteButton more" data-bind="click: showMoreTweetsClicked" rel="external">More</a>
       </div>
     </div>
   </div>
@@ -39,7 +43,6 @@
   <script id="tweetsTemplate" type="text/x-jquery-tmpl">
     <li>
       <p class='tweettext'>${ text }</p>
-
       <p class='tweettime'>${ created_at }</p>
     </li>
   </script>
