Searching for a term instead of user name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div id="twitter" class="current" data-bind="pageAnimationEnd: twitterPageAnimationEnded">
     <div class="toolbar">
-      <h1 data-bind="text: username"></h1>
+      <h1 data-bind="text: searchQuery"></h1>
       <a class="button" data-bind="click: twitterPageRefreshClicked" rel="external">Refresh</a>
     </div>
     <div class="s-scrollwrapper">
