Added head meta links, changed ajax_indicator

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png">
+  <link rel="apple-touch-startup-image" href="/mobile_startup.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=default-width; user-scalable=no"/>
   <meta name="format-detection" content="telephone=no">
   <title>Qrious</title>
   <link href="stylesheets/jqtouch/jqtouch.css" media="screen" rel="stylesheet" type="text/css">
@@ -16,8 +20,8 @@
 <body>
 <div id="jqt">
 
-  <div id="loading_page">
-    <h2>Loading...</h2>
+  <div class="ajax_indicator" style="display: none;">
+    <p>Loading...</p>
   </div>
 
   <div id="twitter" class="current" data-bind="pageAnimationEnd: twitterPageAnimationEnded">
